--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>누구나 접근할 수 있는 항공사 웹사이트</title>
+    <link rel="shortcut icon" href="./images/airplane.png" />
   </head>
   <body>
     <noscript>
