feat: meta 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="엘라의 항공사 웹사이트의 컴포넌트 접근성 높이기 미션" />
     <title>Ella's airline</title>
   </head>
   <body>
