--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/public/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="누구나 접근할 수 있는 항공사" />
-    <link rel="manifest" href="%PUBLIC_URL%/public/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>누구나 항공사</title>
   </head>
   <body>
