--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>🚀 항공사 웹사이트의 컴포넌트 접근성 높이기</title>
     <link
       crossorigin
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
@@ -26,13 +26,91 @@
   <body>
     <div id="root" class="mx-auto w-64 mt-20"></div>
     <script type="text/babel">
-      const Component = () => {
-        const [count, setCount] = React.useState(0);
+      const MIN_COUNT = 0;
+      const MAX_COUNT = 3;
 
-        const onMinusClick = (e) =>
-          setCount((prev) => (prev <= 0 ? prev : prev - 1));
-        const onPlusClick = (e) =>
-          setCount((prev) => (prev >= 3 ? prev : prev + 1));
+      const reducer = (state, action) => {
+        switch (action.type) {
+          case "minus/clicked": {
+            if (state.value <= MIN_COUNT) {
+              return {
+                value: MIN_COUNT,
+                alertMessage: `${MIN_COUNT}`,
+                validationMessage: `성인 승객은 ${MIN_COUNT}명 미만이 될 수 없습니다`,
+              };
+            }
+
+            const value = state.value - 1;
+
+            return {
+              value,
+              alertMessage: `성인 승객 감소 ${value}`,
+              validationMessage: "",
+            };
+          }
+
+          case "plus/clicked": {
+            if (state.value >= MAX_COUNT) {
+              return {
+                value: MAX_COUNT,
+                alertMessage: `성인 승객 ${MAX_COUNT}`,
+                validationMessage: `성인 승객은 ${MAX_COUNT}명 초과가 될 수 없습니다`,
+              };
+            }
+
+            const value = state.value + 1;
+
+            return {
+              value,
+              alertMessage: `성인 승객 증가 ${value}`,
+              validationMessage: "",
+            };
+          }
+
+          case "input/changed": {
+            const value = action.payload;
+            const number = Number(value);
+
+            if (value === "" || Number.isNaN(number)) {
+              return {
+                ...state,
+                value: "",
+                validationMessage: "",
+              };
+            }
+
+            if (number < MIN_COUNT || number > MAX_COUNT) {
+              const alertMessage = `${MIN_COUNT} 이상 ${MAX_COUNT} 이하의 숫자를 입력하세요`;
+
+              return {
+                ...state,
+                alertMessage,
+                validationMessage: alertMessage,
+              };
+            }
+
+            const alertMessage = `성인 승객 ${
+              number > state.value ? "증가" : "감소"
+            } ${number}`;
+
+            return { value: number, alertMessage, validationMessage: "" };
+          }
+          default:
+            return { ...state };
+        }
+      };
+
+      const Component = () => {
+        const [state, dispatch] = React.useReducer(reducer, {
+          value: 0,
+          alertMessage: "",
+          validationMessage: "",
+        });
+
+        const onMinusClick = () => dispatch({ type: "minus/clicked" });
+        const onPlusClick = () => dispatch({ type: "plus/clicked" });
+        const onChange = (event) =>
+          dispatch({ type: "input/changed", payload: event.target.value });
 
         return (
           <React.Fragment>
@@ -41,27 +119,51 @@
             </header>
             <main className="flex flex-col gap-y-8 mt-12">
               <div className="flex font-bold  items-center">
-                <h1 className="text-2xl">성인</h1>
+                <h1 className="text-2xl">
+                  <label htmlFor="adult-value-input">성인</label>
+                </h1>
                 <span className="ml-4 text-xl text-gray-400 border border-gray-400 rounded-full w-6 h-6 flex items-center justify-center">
                   ?
                 </span>
               </div>
-              <section className="flex">
-                <button
-                  className="border rounded-full text-4xl px-4 py-1 flex justify-center items-center w-12 h-12 border-gray-600"
-                  onClick={onMinusClick}
-                >
-                  -
-                </button>
-                <span className="text-4xl px-4 mx-6 border-b border-black ">
-                  {count}
-                </span>
-                <button
-                  className="border rounded-full text-4xl px-4 py-1 flex justify-center items-center w-12 h-12 border-gray-600"
-                  onClick={onPlusClick}
-                >
-                  +
-                </button>
+              <section>
+                <div className="flex mb-4">
+                  <button
+                    className="border border-gray-600 rounded-full text-3xl flex justify-center items-center w-12 h-12"
+                    onClick={onMinusClick}
+                    aria-label="성인 탑승자 한명 줄이기"
+                  >
+                    -
+                  </button>
+                  <input
+                    id="adult-value-input"
+                    className="text-4xl w-16 flex text-center px-4 mx-6 border-b border-black"
+                    type="text"
+                    inputMode="tel"
+                    value={state.value}
+                    onChange={onChange}
+                  />
+
+                  <button
+                    className="border border-gray-600 rounded-full text-3xl flex justify-center items-center w-12 h-12"
+                    onClick={onPlusClick}
+                    aria-label="성인 탑승자 한명 늘리기"
+                  >
+                    +
+                  </button>
+                  <p className="sr-only" role="status">
+                    {state.alertMessage}
+                  </p>
+                </div>
+
+                {state.validationMessage !== "" && (
+                  <p
+                    className="text-xs font-semibold text-red-500"
+                    role="status"
+                  >
+                    {state.validationMessage}
+                  </p>
+                )}
               </section>
             </main>
           </React.Fragment>
