--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="항공사 웹사이트의 컴포넌트 접근성 높이기 미션을 수행하는 웹 페이지입니다."
-    />
 
-    <title>접근성있는 항공사 웹사이트 컴포넌트</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="항공사 웹사이트의 컴포넌트 접근성 높이기 미션을 수행하는 웹 페이지입니다." />
 
-  <body>
-    <noscript>현재 브라우저 환경에서는 서비스가 동작하지 않습니다..</noscript>
-    <div id="root"></div>
-  </body>
+  <title>접근성있는 항공사 웹사이트 컴포넌트</title>
+</head>
+
+<body>
+  <noscript>현재 사용 중인 브라우저는 스크립트를 지원하지 않거나, 해당 기능이 활성화되어 있지 않습니다. 스크립트를 활성화하거나 다른 브라우저를 사용해주세요.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
