--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="항공사 웹사이트의 컴포넌트 접근성 높이기 미션을 수행하는 웹 페이지입니다." />
 
-  <title>접근성있는 항공사 웹사이트 컴포넌트</title>
+  <title>항공사 웹사이트 컴포넌트</title>
 </head>
 
 <body>
