feat: 페이지 언어 변경

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -7,6 +7,7 @@
     <title>웹 접근성 미션 - 스밍</title>
   </head>
   <body>
-    <div id="root"></div>
+    <button type="button">-</button>
+    <button type="button">+</button>
   </body>
 </html>
