feat: html, css 구현

--- a/index.html
+++ b/index.html
@@ -6,5 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>우테코 - 접근성 미션</title>
   </head>
-  <body></body>
+  <body>
+    <section class="spin-input-section" aria-labelledby="spin-input-title">
+      <h1 id="spin-input-title">승객 선택</h1>
+      <fieldset class="spin-input" aria-label="성인 승객 수 입력란">
+        <legend class="label-container">
+          <p for="spin-value" id="spin-label">성인</p>
+          <button class="default-button-container tip-button">
+            <div
+              class="round-button-icon tip-button-icon"
+              aria-label="도움말 보기"
+            >
+              ?
+            </div>
+          </button>
+        </legend>
+        <div class="input-area">
+          <button
+            class="spin-button decrement default-button-container"
+            aria-label="성인 탑승자 한명 줄이기"
+          >
+            <div class="round-button-icon">–</div>
+          </button>
+          <input
+            type="number"
+            class="spin-button-value-input"
+            name="spin-value"
+            value="1"
+            aria-labelledby="spin-label"
+          />
+          <button
+            class="spin-button increment default-button-container"
+            aria-label="성인 탑승자 한명 늘리기"
+          >
+            <div class="round-button-icon">+</div>
+          </button>
+        </div>
+      </fieldset>
+    </section>
+  </body>
 </html>
