--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             name="spin-value"
             value="1"
             aria-labelledby="spin-label"
+            min="1"
+            max="3"
           />
           <button
             class="spin-button increment default-button-container"
