feat: input 상태 변화 시 스크린 리더에게 전달하도록 설정

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <div class="round-button-icon">+</div>
           </button>
         </div>
+        <p role="status" id="spin-input-status"></p>
       </fieldset>
     </section>
   </body>
