feat: 추가 삭제가 될시 스크린리더에게 메시지를 읽게할 노드 생성

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             value="0"
             maxlength="1"
           />
+          <span aria-live="assertive" aria-relevant="additions" id="aria-adult">
+            <!--  -->
+          </span>
           <button class="add-passenger-button counter-button" type="button">
             +
             <span class="aria-hidden">성인 탑승자 1명 증가</span>
