--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="counter-container">
           <button
             type="button"
+            aria-label="성인 탑승자 1명 감소"
             class="decrease-passenger-button counter-button disabled-button"
           >
             -
@@ -23,8 +24,14 @@
             id="adult-passenger-input"
             type="tel"
             value="0"
+            aria-valuemin="0"
+            aria-valuemax="3"
+            aria-live="polite"
             maxlength="1"
           />
+          <p id="adult-passenger-input" role="tooltip" hidden>
+            텍스트 없이 숫자만 입력.
+          </p>
           <span aria-live="assertive" aria-relevant="additions" id="aria-adult">
             <!--  -->
           </span>
