--- a/index.html
+++ b/index.html
@@ -10,7 +10,26 @@
     <article>
       <h2>승객 선택</h2>
       <section>
-        <h3>성인</h3>
+        <div class="title-container">
+          <h3>성인</h3>
+          <button
+            class="help-box-button"
+            type="button"
+            aria-haspopup="true"
+            aria-controls="help-box"
+            aria-expanded="false"
+          >
+            ?
+          </button>
+          <div
+            id="help-box"
+            role="dialog"
+            aria-live="assertive"
+            aria-relevant="additions"
+          >
+            <!--  -->
+          </div>
+        </div>
         <div class="counter-container">
           <button
             type="button"
