--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <button
             type="button"
             aria-label="성인 탑승자 1명 감소"
+            aria-atomic="true"
             class="decrease-passenger-button counter-button disabled-button"
           >
             -
@@ -46,12 +47,9 @@
             value="0"
             aria-valuemin="0"
             aria-valuemax="3"
-            aria-live="polite"
+            aria-live="assertive"
             maxlength="1"
           />
-          <p id="adult-passenger-input" role="tooltip" hidden>
-            텍스트 없이 숫자만 입력.
-          </p>
           <span
             aria-live="assertive"
             aria-relevant="additions"
