--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="keyword" content="미션, 항공사, 웹사이트, 접근성" />
+    <meta name="description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="a11y-airline" />
+    <meta property="og:description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
     <title>a11y-airline</title>
   </head>
   <body>
