feat: meta 태그(og:url) 추가

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta name="keyword" content="미션, 항공사, 웹사이트, 접근성" />
     <meta name="description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://beamish-truffle-c178b1.netlify.app/" />
     <meta property="og:title" content="a11y-airline" />
     <meta property="og:description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
     <title>a11y-airline</title>
