feat: aria-hidden의 클래스명 sr-only로 변경

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             class="decrease-passenger-button counter-button disabled-button"
           >
             -
-            <span class="aria-hidden">성인 탑승자 1명 감소</span>
+            <span class="sr-only">성인 탑승자 1명 감소</span>
           </button>
           <input
             id="adult-passenger-input"
@@ -60,7 +60,7 @@
           </span>
           <button class="add-passenger-button counter-button" type="button">
             +
-            <span class="aria-hidden">성인 탑승자 1명 증가</span>
+            <span class="sr-only">성인 탑승자 1명 증가</span>
           </button>
         </div>
       </section>
