refactor: polite 속성 적용

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button class="passenger__control -add" type="button">
           성인 탑승자 한명 늘리기
         </button>
-        <div class="hidden" aria-live="assertive"></div>
+        <div class="hidden" aria-live="polite"></div>
       </div>
     </section>
   </body>
