--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,28 @@
     <title>누구나 접근할 수 있는 항공사 웹사이트</title>
   </head>
   <body>
-    <div id="root"></div>
+    <section>
+      <h2>승객 선택</h2>
+      <article>
+        <div class="passenger-type-container">
+          <h3>성인</h3>
+          <button id="help-box">?</button>
+          <div id="adult-help-context" class="hide help-content">
+            탑승일 기준 만 22세 이상
+          </div>
+        </div>
+        <div class="counter">
+          <button id="reduce-passenger">-</button>
+          <input
+            type="number"
+            id="passenger-amount"
+            value="1"
+            max="3"
+            min="1"
+          />
+          <button id="add-passenger">+</button>
+        </div>
+      </article>
+    </section>
   </body>
 </html>
