--- a/index.html
+++ b/index.html
@@ -9,43 +9,41 @@
   <body>
     <section class="spin-input-section" aria-labelledby="spin-input-title">
       <h1 id="spin-input-title">승객 선택</h1>
-      <fieldset class="spin-input" aria-label="성인 승객 수 입력란">
-        <legend class="label-container">
-          <p for="spin-value" id="spin-label">성인</p>
+      <article class="spin-input" aria-labelledby="spin-label">
+        <div class="label-container">
+          <label for="spin-value" id="spin-label">성인</label>
           <button class="default-button-container tip-button">
-            <div
-              class="round-button-icon tip-button-icon"
-              aria-label="도움말 보기"
+            <span aria-label="성인기준 상세 안내"></span>
+            <span class="round-button-icon tip-button-icon" aria-hidden="true"
+              >?</span
             >
-              ?
-            </div>
           </button>
-        </legend>
+        </div>
         <div class="input-area">
           <button
             class="spin-button decrement default-button-container"
             aria-label="성인 탑승자 한명 줄이기"
           >
-            <div class="round-button-icon">–</div>
+            <span class="round-button-icon" aria-hidden="true">–</span>
           </button>
           <input
             type="number"
             class="spin-button-value-input"
             name="spin-value"
             value="1"
-            aria-labelledby="spin-label"
             min="1"
             max="3"
+            aria-label="선택된 성인 승객 수"
           />
           <button
             class="spin-button increment default-button-container"
             aria-label="성인 탑승자 한명 늘리기"
           >
-            <div class="round-button-icon">+</div>
+            <span class="round-button-icon" aria-hidden="true">+</span>
           </button>
         </div>
-        <p role="status" id="spin-input-status"></p>
-      </fieldset>
+        <p role="status" id="spin-input-status" aria-live="polite"></p>
+      </article>
     </section>
   </body>
 </html>
