--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>우테코 - 접근성 미션</title>
+    <title>항공권 예약하기 | 승객 수 선택</title>
   </head>
   <body>
     <section class="spin-input-section" aria-labelledby="spin-input-title">
@@ -12,14 +12,16 @@
       <article class="spin-input" aria-labelledby="spin-label">
         <div class="label-container">
           <label for="spin-value" id="spin-label">성인</label>
-          <button class="default-button-container tip-button">
-            <span aria-label="성인기준 상세 안내"></span>
+          <button
+            class="default-button-container tip-button"
+            aria-label="성인기준 상세 안내"
+          >
             <span class="round-button-icon tip-button-icon" aria-hidden="true"
               >?</span
             >
           </button>
         </div>
-        <div class="input-area">
+        <div class="input-container">
           <button
             class="spin-button decrement default-button-container"
             aria-label="성인 탑승자 한명 줄이기"
@@ -30,10 +32,10 @@
             type="number"
             class="spin-button-value-input"
             name="spin-value"
+            id="spin-value"
             value="1"
             min="1"
             max="3"
-            aria-label="선택된 성인 승객 수"
           />
           <button
             class="spin-button increment default-button-container"
