--- a/public/index.html
+++ b/public/index.html
@@ -7,28 +7,43 @@
     <title>누구나 접근할 수 있는 항공사 웹사이트</title>
   </head>
   <body>
-    <section>
-      <h2>승객 선택</h2>
-      <article>
-        <div class="passenger-type-container">
-          <h3>성인</h3>
-          <button id="help-box">?</button>
-          <div id="adult-help-context" class="hide help-content">
-            탑승일 기준 만 22세 이상
+    <main>
+      <section>
+        <h2>승객 선택</h2>
+        <article>
+          <div class="passenger-type-container">
+            <h3>성인</h3>
+            <button id="help-box" aria-label="성인의 기준 안내">?</button>
+            <div
+              id="adult-help-context"
+              class="hide help-content"
+              aria-live="polite"
+            >
+              <span>탑승일 기준 만 22세 이상</span>
+            </div>
           </div>
-        </div>
-        <div class="counter">
-          <button id="reduce-passenger">-</button>
-          <input
-            type="number"
-            id="passenger-amount"
-            value="1"
-            max="3"
-            min="1"
-          />
-          <button id="add-passenger">+</button>
-        </div>
-      </article>
-    </section>
+          <div class="counter" aria-atomic="true">
+            <button id="reduce-passenger" aria-label="성인 탑승자 한명 줄이기">
+              -
+            </button>
+            <input
+              type="tel"
+              id="passenger-amount"
+              value="1"
+              max="3"
+              min="1"
+              aria-valuenow="1"
+              aria-valuemin="1"
+              aria-valuemax="3"
+              aria-label="성인"
+            />
+            <button id="add-passenger" aria-label="성인 탑승자 한명 늘리기">
+              +
+            </button>
+          </div>
+        </article>
+      </section>
+      <div id="announce" role="status" class="hide"></div>
+    </main>
   </body>
 </html>
