--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <title>React App</title>
+    <title>승객 선택 미션 입니다.</title>
   </head>
   <body>
     <div id="root"></div>
