--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <script defer src="./src/javascript/index.js"></script>
   <body>
+    <h1>승객 선택</h1>
     <section>
-      <h1>승객 선택</h1>
       <div class="passenger__title">
-        <span class="passenger__label">성인</span>
+        <h2 class="passenger__label">성인</h2>
         <button class="adult__count -tooltip" role="tooltip">
           성인 기준 상세 안내
         </button>
