--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <title>승객 수 입력</title>
   </head>
   <body>
@@ -38,6 +38,6 @@
         <p id="politeText" class="polite_text" aria-live="polite"></p>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
