--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/css/index.css" />
-    <title>승객수 입력하기</title>
+    <title>🌿민초항공 - Mincho Air🌿</title>
   </head>
   <script defer type="module" src="./src/javascript/index.js"></script>
   <body>
