--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>항공기 미션</title>
+    <meta name="웹 접근성 미션" content="우아한테크코스의 웹 접근성 미션" />
+    <title>웹 접근성 미션</title>
   </head>
   <body>
     <div id="root"></div>
