--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html lang="ko">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <title>웹 접근성 미션</title>
-  </head>
-  <body>
-    <noscript
-      >자바스크립트 실행이 가능한
-      브라우저에서 다시
-      시도해주세요</noscript
-    >
-    <div id="root"></div>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>웹 접근성 미션</title>
+		<base href="/" />
+	</head>
+	<body>
+		<noscript>자바스크립트 실행이 가능한 브라우저에서 다시 시도해주세요</noscript>
+		<div id="root"></div>
+	</body>
 </html>
