refactor: aria-live 수정

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
       .hidden {
         display: none;
       }
+
+      .hidden-text {
+        text-indent: -9999px;
+      }
     </style>
   </head>
   <body>
@@ -101,7 +105,7 @@
           </svg>
         </label>
         <form id="select-people-form">
-          <div id="select-people-output-live" class="hidden" aria-live="polite"></div>
+          <div id="select-people-output-live" class="hidden-text" aria-live="polite"></div>
 
           <button id="plus" type="button" aria-label="성인 탑승자 한명 늘리기" aria-pressed="true">
             +
