--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
       <div class="header">
         <h3>성인</h3>
 
-        <button class="tooltip" role="tooltip" aria-label="성인 기준 상세 안내">
+        <button
+          id="tooltip"
+          class="tooltip"
+          role="tooltip"
+          aria-label="성인 기준 상세 안내"
+        >
           ?
         </button>
       </div>
