refactor: aria-label 추가

--- a/index.html
+++ b/index.html
@@ -12,9 +12,21 @@
         <div class="passenger-type__tooltip">?</div>
       </div>
       <div class="passenger-count">
-        <button type="button" class="passenger-count__minus-button">-</button>
+        <button
+          type="button"
+          aria-label="성인 탑승자 한명 줄이기"
+          class="passenger-count__minus-button"
+        >
+          -
+        </button>
         <input type="number" class="passenger-count__input" />
-        <button type="button" class="passenger-count__plus-button">+</button>
+        <button
+          type="button"
+          aria-label="성인 탑승자 한명 늘리기"
+          class="passenger-count__plus-button"
+        >
+          +
+        </button>
       </div>
     </section>
     <script type="module" src="src/index.js"></script>
