feat: 승객 숫자 증가/감소 기능 추가

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         >
           -
         </button>
-        <input type="number" class="passenger-count__input" />
+        <input type="number" class="passenger-count__input" value="1" />
         <button
           type="button"
           aria-label="성인 탑승자 한명 늘리기"
