--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>항공사 접근성 미션</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <section>
