--- a/index.html
+++ b/index.html
@@ -6,20 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>항공사 웹사이트</title>
     <link rel="stylesheet" href="./src/css/index.css" />
-    <script src="./src/index.js"></script>
   </head>
   <body>
     <section>
       <h1>승객 선택</h1>
       <div class="passenger-title">
         <h2>성인</h2>
-        <button type="button" class="tooltip button">?</button>
+        <button
+          class="tooltip button"
+          type="button"
+          aria-label="성인 기준 상세 안내"
+        >
+          ?
+        </button>
       </div>
       <div>
-        <button type="button" class="count button">-</button>
-        <input type="number" min="1" max="3" class="count-input" />
-        <button type="button" class="count button">+</button>
+        <button
+          class="decrement-button button"
+          type="button"
+          aria-label="성인 탑승자 한명 줄이기"
+        >
+          -
+        </button>
+        <input
+          id="passenger-amount-input"
+          type="number"
+          value="1"
+          min="1"
+          max="3"
+          aria-label="성인"
+        />
+        <button
+          class="increment-button button"
+          type="button"
+          aria-label="성인 탑승자 한명 늘리기"
+        >
+          +
+        </button>
       </div>
+      <div id="input-status" role="status"></div>
     </section>
+    <script src="./src/index.js"></script>
   </body>
 </html>
