feat: input type 수정 및 스타일 변경

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </button>
         <input
           id="passenger-amount-input"
-          type="number"
+          type="tel"
           value="1"
           min="1"
           max="3"
