feat: 스타일 추가

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="passenger-type">
         <h2 class="passenger-type__title">성인</h2>
         <div class="passenger-type__tooltip">?</div>
+        <p>입력 가능한 승객은 최소 1명, 최대 3명입니다.</p>
       </div>
       <div class="passenger-count">
         <button
