fix: button aria 속성 수정

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h2 class="passenger-type__title">성인</h2>
         <button
           class="passenger-type__tooltip"
-          aria-labelledby="tip-passenger-count"
+          aria-describedby="tip-passenger-count"
         >
           ?
         </button>
