feat: 승객수를 버튼을 통해 변경했을 때, 스크린리더가 상태를 읽어주는 기능 추가
aria-live를 사용

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>a11y: 승객수 선택</title>
+    <title>Winnie Air 항공권 예약: 승객 선택</title>
   </head>
   <body>
     <div id="root"></div>
