feat: 스크린리더가 +를 더하기 기호로 읽는 문제 수정

--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
           >
             <!--  -->
           </span>
-          <button class="add-passenger-button counter-button" type="button">
+          <button
+            class="add-passenger-button counter-button"
+            type="button"
+            aria-label="성인 탑승자 1명 감소"
+            aria-atomic="true"
+          >
             +
             <span class="sr-only">성인 탑승자 1명 증가</span>
           </button>
