--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,13 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="keyword" content="미션, 항공사, 웹사이트, 접근성" />
+    <meta name="description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://capable-pixie-ad7eb2.netlify.app/" />
+    <meta property="og:title" content="a11y-airline" />
+    <meta property="og:description" content="미션: 항공사 웹사이트 컴포넌트의 접근성 높이기" />
     <title>웹 접근성 미션</title>
   </head>
   <body>
