feat: native alert 대신 snackbar를 사용하도록 수정

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
       </div>
       <p role="status" id="spin-input-status" aria-live="polite"></p>
     </form>
+    <div id="snackbar-container"></div>
   </body>
 </html>
