config : 프로젝트 환경 리액트로 변경

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,6 @@
   </head>
 
   <body>
-    <section id="counter">
-      <h1>승객 선택</h1>
-    </section>
+    <div id="root"></div>
   </body>
 </html>
