feat: snackbar에 aria-live 적용

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,6 @@
         </form>
       </main>
     </div>
-    <div id="snackbar"></div>
+    <div id="snackbar" role="status" aria-live="off"></div>
   </body>
 </html>
