--- a/index.html
+++ b/index.html
@@ -9,66 +9,10 @@
   </head>
   <script defer type="module" src="./src/javascript/index.js"></script>
   <body>
-    <!-- <div class="tab__area">
-      <button class="step1__button tab tab__focus">Step1</button>
-      <button class="step2__button tab">Step2</button>
-    </div> -->
-    <div id="app">
-      <h1>지금 떠나기 좋은 여행</h1>
-      <div class="carousel__wrap">
-        <section class="carousel" role="list">
-          <article class="slide" role="listitem">
-            <h2>1번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>2번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>3번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>4번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>5번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>6번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>7번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-          <article class="slide" role="listitem">
-            <h2>8번 여행지</h2>
-            <p>일반석 왕복</p>
-            <p class="price" aria-hidden="true">KRW 1,121,600 ~</p>
-            <p class="hidden">KRW 1,121,600</p>
-          </article>
-        </section>
-        <button class="prev" aria-label="이전 버튼">&lt;</button>
-        <button class="next" aria-label="다음 버튼">&gt;</button>
-      </div>
+    <div class="tab__area">
+      <button class="step1__button tab">Step1</button>
+      <button class="step2__button tab tab__focus">Step2</button>
     </div>
+    <div id="app"></div>
   </body>
 </html>
