fix: 이미 버튼으로 읽히기 때문에 버튼을 삭제한다

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
               </div>
             </div>
             <div class="spin-input-container adult-passenger-spin">
-              <button type="button" class="spin-button" data-step="-1" aria-label="성인 탑승자 한 명 줄이기 버튼">-</button>
+              <button type="button" class="spin-button" data-step="-1" aria-label="성인 탑승자 한 명 줄이기">-</button>
               <input
                 id="adult-passenger-count-input"
                 class="passenger-count-input"
@@ -30,7 +30,7 @@
                 max="3"
                 value="0"
               ></input>
-              <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기 버튼">+</button>
+              <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기">+</button>
             </div>
           </div>
         </form>
