--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
               <div class="helptip-container">
                 <button type="button" class="helptip-trigger" aria-label="성인 기준 상세 안내 열기"><span>?</span></button>
                 <div class="helptip">
-                  <span>국제선 만 12세 이상, 국내선 만 13세 이상</span>
+                  <span aria-live="off">국제선 만 12세 이상, 국내선 만 13세 이상</span>
                   <button type="button" class="helptip-closer" aria-label="성인 기준 상세 안내 닫기"><span>x</span></button>
                 </div>
               </div>
