feat: 숫자가 바뀔때 스크린 리더가 숫자를 읽도록 설정

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
             value="0"
           ></input>
           <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기">+</button>
+          <div class="aria-hidden spin-input-aria-live-message"></div>
         </div>
       </div>
     </div>
