--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
         <form id="select-people-form">
           <div id="select-people-output-live" class="hidden-text" aria-live="polite"></div>
 
-          <button id="plus" type="button" aria-label="성인 탑승자 한명 늘리기" aria-pressed="true">
-            +
-          </button>
+          <button id="plus" type="button" aria-label="성인 탑승자 한명 늘리기">+</button>
 
           <output
             id="select-people-output"
@@ -125,9 +123,7 @@
 
           <input id="select-people-input" class="hidden" type="number" value="1" max="3" min="1" />
 
-          <button id="minus" type="button" aria-label="성인 탑승자 한명 줄이기" aria-pressed="true">
-            -
-          </button>
+          <button id="minus" type="button" aria-label="성인 탑승자 한명 줄이기">-</button>
         </form>
       </section>
     </main>
