--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="woowacourse a11y-airline mission." />
     <link rel="stylesheet" href="./src/css/index.css" />
     <title>Mincho Air</title>
   </head>
