style: 페이지 형식이 깨지지 않도록 툴팁 스타일 변경

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           >
         </button>
         <div role="tooltip" class="tooltip-container hide">
-          국제선 만 12세 이상, 국내선 만 13세 이상
+          국제선 만 12세 이상, <br />
+          국내선 만 13세 이상
           <button
-            aria-label="닫기"
             type="button"
             class="default-button-container tooltip-close-button"
           >
-            <span aria-hidden="true">🗙</span>
+            <span>닫기</span>
           </button>
         </div>
       </div>
