feat: aria-disabled 속성 추가

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           class="decrement-button button"
           type="button"
           aria-label="성인 탑승자 한명 줄이기"
+          aria-atomic="true"
         >
           -
         </button>
@@ -40,6 +41,7 @@
           class="increment-button button"
           type="button"
           aria-label="성인 탑승자 한명 늘리기"
+          aria-atomic="true"
         >
           +
         </button>
