--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <h1>승객 선택</h1>
-      <div class="passenger-title">
+      <article class="passenger-title">
         <h2>성인</h2>
         <button
           class="tooltip button"
@@ -19,7 +19,7 @@
         >
           ?
         </button>
-      </div>
+      </article>
       <div>
         <button
           class="decrement-button button"
