refactor: 스타일 네이밍 변경

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           +
         </button>
       </div>
-      <div id="input-status" role="status"></div>
+      <div id="input-status" class="sr-only" role="status"></div>
     </section>
     <script src="./src/index.js"></script>
   </body>
