feat: 툴팁 html,css 추가

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         >
           ?
         </button>
+        <div class="tooltip-content sr-only" aria-live="polite">
+          <span>국제선 만 12세 이상, 국내선 만 13세 이상</span>
+        </div>
       </article>
       <div>
         <button
