--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
             aria-label="탑승할 성인의 수를 입력해주세요"
+            role="tooltip"
           >
             <path
               fill-rule="evenodd"
@@ -109,7 +110,7 @@
         <form id="select-people-form">
           <div id="select-people-output-live" class="hidden-text" aria-live="polite"></div>
 
-          <button id="plus" type="button" aria-label="성인 탑승자 한명 늘리기">+</button>
+          <button id="minus" type="button" aria-label="성인 탑승자 한명 줄이기">-</button>
 
           <output
             id="select-people-output"
@@ -123,7 +124,7 @@
 
           <input id="select-people-input" class="hidden" type="number" value="1" max="3" min="1" />
 
-          <button id="minus" type="button" aria-label="성인 탑승자 한명 줄이기">-</button>
+          <button id="plus" type="button" aria-label="성인 탑승자 한명 늘리기">+</button>
         </form>
       </section>
     </main>
