fix: polite -> off

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,6 @@
         </div>
       </div>
     </div>
-    <div id="snackbar" role="status" aria-live="polite"></div>
+    <div id="snackbar" role="status"></div>
   </body>
 </html>
