fix: aria-live 속성을 동적으로 바꾸지 않음

--- a/src/index.html
+++ b/src/index.html
@@ -32,10 +32,10 @@
             value="0"
           ></input>
           <button type="button" class="spin-button" data-step="1" aria-label="성인 탑승자 한 명 늘리기">+</button>
-          <div class="aria-hidden spin-input-aria-live-message"></div>
+          <div class="aria-hidden spin-input-aria-live-message" aria-live="polite"></div>
         </div>
       </div>
     </div>
-    <div id="snackbar" role="status"></div>
+    <div id="snackbar" role="status" aria-live="assertive"></div>
   </body>
 </html>
