feat: aria-hidden 속성 추가

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <button
           class="tooltip button"
           type="button"
+          aria-controls="tooltip-content"
           aria-label="성인 기준 상세 안내"
+          aria-hidden="false"
         >
           ?
         </button>
