fix: input max/min 설정 추가

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
           type="number"
           id="passenger-input"
           class="passenger-count__input"
+          max="3"
+          min="1"
           value="1"
         />
         <button
