fix: 접근 가능한 텍스트 숨김 처리

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         >
           +
         </button>
-        <p role="status" class="status-message" aria-hidden="false"></p>
+        <p role="status" class="status-message"></p>
       </div>
     </section>
     <script type="module" src="src/index.js"></script>
