fix: helptip-content에 aria-hidden을 적용한다

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
           <div class="helptip-container">
             <button type="button" class="helptip-trigger" aria-label="성인 기준 상세 안내 열기"><span>?</span></button>
             <div class="helptip">
-              <span class="helptip-content">국제선 만 12세 이상, 국내선 만 13세 이상</span>
+              <span class="helptip-content" aria-hidden="true">국제선 만 12세 이상, 국내선 만 13세 이상</span>
               <button type="button" class="helptip-closer" aria-label="성인 기준 상세 안내 닫기"><span>x</span></button>
             </div>
           </div>
