feat: carousel 아이템에 대한 description 작성

--- a/carousel.html
+++ b/carousel.html
@@ -10,7 +10,7 @@
     <h1>지금 떠나기 좋은 여행</h1>
     <div class="carousel-container">
       <ul class="carousel-list">
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -20,9 +20,16 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/DXB-list-pc.jpg"
               alt=""
-          /></a>
+            />
+
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 두바이</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 1,157,500 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -32,9 +39,16 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FUK-list-pc.jpg"
               alt=""
-          /></a>
+            />
+
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 후쿠오카</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 340,200 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -44,9 +58,15 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HKT-list-pc.jpg"
               alt=""
-          /></a>
+            />
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 푸껫</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 1,157,500 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -56,9 +76,15 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/CNX-list-pc.jpg"
               alt=""
-          /></a>
+            />
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 치앙마이</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 794,100 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -68,9 +94,15 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/BCN-list-pc.jpg"
               alt=""
-          /></a>
+            />
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 바르셀로나</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 1,546,300 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -80,9 +112,15 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HAN-list-pc.jpg"
               alt=""
-          /></a>
+            />
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 하노이</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 486,900 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -92,9 +130,17 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/FCO-list-pc.jpg"
               alt=""
-          /></a>
+            />
+            <div class="carousel-description">
+              <h2 class="description-header">
+                서울/인천 - 로마/레오나르도 다빈치
+              </h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 1,454,200 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
-        <li>
+        <li class="carousel-item">
           <a
             target="_blank"
             rel="external"
@@ -104,7 +150,13 @@
               class="carousel-image"
               src="https://www.koreanair.com/content/dam/koreanair/ko/airport-img/HNL-list-pc.jpg"
               alt=""
-          /></a>
+            />
+            <div class="carousel-description">
+              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 호놀룰루(하와이)</h2>
+              <p class="description-class">일반석 왕복</p>
+              <p class="description-price">KRW 1,243,800 <p aria-hidden="true">~</p></p>
+            </div>
+          </a>
         </li>
       </ul>
       <div class="arrow-button-list">
