feat: aria-hidden옵션을 이용하여 특수기호를 읽지 않도록 설정

--- a/carousel.html
+++ b/carousel.html
@@ -9,12 +9,13 @@
   <body>
     <h1>지금 떠나기 좋은 여행</h1>
     <div class="carousel-container">
-      <ul class="carousel-list">
-        <li class="carousel-item">
+      <ul class="carousel-list" role="tablist">
+        <li class="carousel-item" data-id="0">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=DXB&duration=7&cabin=Y"
             ><img
               class="carousel-image"
@@ -23,17 +24,22 @@
             />
 
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 두바이</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 두바이
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 1,157,500 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 1,157,500 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="1">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FUK&cabin=Y&tripType=RT&duration=7"
             ><img
               class="carousel-image"
@@ -42,17 +48,22 @@
             />
 
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 후쿠오카</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 후쿠오카
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 340,200 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 340,200 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="2">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HKT&cabin=Y&tripType=RT&duration=7"
             ><img
               class="carousel-image"
@@ -60,17 +71,22 @@
               alt=""
             />
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 푸껫</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 푸껫
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 1,157,500 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 1,157,500 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="3">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=CNX&cabin=Y&tripType=RT&duration=7"
             ><img
               class="carousel-image"
@@ -78,17 +94,22 @@
               alt=""
             />
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 치앙마이</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 치앙마이
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 794,100 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 794,100 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="4">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=BCN&duration=7&cabin=Y"
             ><img
               class="carousel-image"
@@ -96,17 +117,22 @@
               alt=""
             />
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 바르셀로나</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 바르셀로나
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 1,546,300 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 1,546,300 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="5">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HAN&duration=7&cabin=Y"
             ><img
               class="carousel-image"
@@ -114,16 +140,21 @@
               alt=""
             />
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 하노이</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 하노이
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 486,900 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 486,900 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="6">
           <a
             target="_blank"
             rel="external"
+            class="carousel-anchor"
             title=""
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=FCO&duration=7&cabin=Y"
             ><img
@@ -136,15 +167,18 @@
                 서울/인천 - 로마/레오나르도 다빈치
               </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 1,454,200 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 1,454,200 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
-        <li class="carousel-item">
+        <li class="carousel-item" data-id="7">
           <a
             target="_blank"
             rel="external"
             title=""
+            class="carousel-anchor"
             href="https://www.koreanair.com/booking/best-prices?departureCode=ICN&destinationCode=HNL&cabin=Y&tripType=RT&duration=7"
             ><img
               class="carousel-image"
@@ -152,9 +186,13 @@
               alt=""
             />
             <div class="carousel-description">
-              <h2 class="description-header">서울<span aria-hidden="true">/</span>인천 - 호놀룰루(하와이)</h2>
+              <h2 class="description-header">
+                서울<span aria-hidden="true">/</span>인천 - 호놀룰루(하와이)
+              </h2>
               <p class="description-class">일반석 왕복</p>
-              <p class="description-price">KRW 1,243,800 <p aria-hidden="true">~</p></p>
+              <p class="description-price">
+                KRW 1,243,800 <span aria-hidden="true">~</span>
+              </p>
             </div>
           </a>
         </li>
